2004-08-16  Stefan Petersen  <spe@stacken.kth.se>

	* doc/*, example/*: Makefiles.am removed Makefile.in wheh running
	  distclean. Not good. Spotted by Hamish Moffatt when packaging
	  for Debian.

2004-07-28  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: In gerbers the image can be negative or positive.
	  Then a part of the image called a layer can be clear or dark.
	  -"No more weed for you, Mr Gerber".
	  Richard Lightman found this and submitted both an example and 
	  a patch. Thanks!

2004-07-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: When drawing thermals the cross ends in butt
	  instead of round which gives nicer look when thermal covers an 
	  other via.

2004-06-27  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Improved comments on what is going and why. Also
	  improved a little in determining the size of the image. Now it 
	  ignores points with no aperture defined, unless it is a polygon 
	  area.

2004-06-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Removed two potential segfaults when running old
	  RS-274D format.

	* src/gerber.c, src/batch.c, src/gerb_image.[hc]: Actually removed
	  all traces of MQ_END and MQ_START. That means that empty nodes 
	  with only this information isn't saved, since the only time we need
	  this information is when parsing arcs. When an arc is parsed
	  the information wheter that arc is multi or single quadrant is
	  saved there. Also closes bug #942590.

	* src/gerbv.c, src/gerbv_screen.h, src/gerb_image.c, src/gerb_image.h:
	  Added possibility to dump a parsed image as text to be able to
	  debug the parser.

2004-06-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: By mistake I assumed that all aperture 
	  macros had exposure flags, but that was a mistake. Drew Moore
	  pointed it out to me. Thanks.

2004-06-05  Stefan Petersen  <spe@stacken.kth.se>

	* */.cvsignore, man/gerbv.1.in, src/gerbv.c: Minor updates and 